[v 1.3] перевод на java 8 т.к. raspberry не поддерживает выше