@@ -21,6 +21,7 @@ import org.telegram.telegrambots.meta.api.methods.updatingmessages.DeleteMessage
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -161,7 +162,7 @@ public class DeleteTopicAdminHandler implements UpdateHandler
 
         SendMessage incorrectActionMessage = MessageUtils.createMessageTemplate(customer)
                 .setText(message);
-        return List.of(incorrectActionMessage);
+        return Arrays.asList(incorrectActionMessage);
     }
 
     private String buildLogMessage(UpdateWrapper updateWrapper)
