@@ -10,6 +10,8 @@ import org.junit.Test;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
 
@@ -27,7 +29,7 @@ public class SectionParserTest
     public void testByMainPage() throws IOException
     {
 
-        Set<Section> testSections = Set.of(new Section("Dota 2 Inside", URI.create("https://prodota.ru/forum/63/")),
+        Set<Section> testSections = new HashSet<>(Arrays.asList(new Section("Dota 2 Inside", URI.create("https://prodota.ru/forum/63/")),
                 new Section("TI and Majors", URI.create("https://prodota.ru/forum/127/")),
                 new Section("Стримы", URI.create("https://prodota.ru/forum/65/")),
                 new Section("Профессиональные ивенты", URI.create("https://prodota.ru/forum/70/")),
@@ -36,10 +38,10 @@ public class SectionParserTest
                 new Section("Таверна", URI.create("https://prodota.ru/forum/16/")),
                 new Section("Анонимная таверна", URI.create("https://prodota.ru/forum/129/")),
                 new Section("Мастерская", URI.create("https://prodota.ru/forum/15/")),
-                new Section("Архив", URI.create("https://prodota.ru/forum/95/")));
+                new Section("Архив", URI.create("https://prodota.ru/forum/95/"))));
 
-        SectionContent testContent = SectionContent.of(testSections, Set.of(), Optional.empty());
-        String pageStr = Files.readString(resourcePath("prodota_forum_main.html"));
+        SectionContent testContent = SectionContent.of(testSections, new HashSet<>(), Optional.empty());
+        String pageStr = new String(Files.readAllBytes(resourcePath("prodota_forum_main.html")));
         SectionContent content = sectionParser.parse(pageStr);
 
         assertEquals(content, testContent);
@@ -49,17 +51,17 @@ public class SectionParserTest
     public void testByMafiaPage() throws IOException
     {
 
-        Set<Section> testSections = Set.of(new Section("Архив", URI.create("https://prodota.ru/forum/71/")));
-        Set<Topic> testTopics = Set.of(createTopic("Регистрация№445", "https://prodota.ru/forum/topic/219579/", TopicStatus.OPEN),
+        Set<Section> testSections = new HashSet<>(Arrays.asList(new Section("Архив", URI.create("https://prodota.ru/forum/71/"))));
+        Set<Topic> testTopics = new HashSet<>(Arrays.asList(createTopic("Регистрация№445", "https://prodota.ru/forum/topic/219579/", TopicStatus.OPEN),
                 createTopic("Мафиозная флудилка т.18, Покорение статы в новом десятилетии", "https://prodota.ru/forum/topic/217907/", TopicStatus.OPEN),
                 createTopic("Мафия 444. Трудно быть демоном. Ночи в 21-00", "https://prodota.ru/forum/topic/219541/", TopicStatus.CLOSED),
                 createTopic("Стата версия 3.0 (черная)", "https://prodota.ru/forum/topic/217329/",TopicStatus.OPEN),
                 createTopic("рейд за новичками (рега)", "https://prodota.ru/forum/topic/218642/",TopicStatus.OPEN),
                 createTopic("Мафия 443: Туссент, Эрвелюс, Кровосиси", "https://prodota.ru/forum/topic/219239/",TopicStatus.CLOSED),
-                createTopic("Мафия 442: Вас посетила Эрафия Police, впредь больше без матвинов фуллконфой", "https://prodota.ru/forum/topic/219101/", TopicStatus.CLOSED));
+                createTopic("Мафия 442: Вас посетила Эрафия Police, впредь больше без матвинов фуллконфой", "https://prodota.ru/forum/topic/219101/", TopicStatus.CLOSED)));
 
         SectionContent testContent = SectionContent.of(testSections, testTopics, Optional.of("https://prodota.ru/forum/45/page/2/"));
-        String pageStr = Files.readString(resourcePath("prodota_forum_mafia.html"));
+        String pageStr = new String(Files.readAllBytes(resourcePath("prodota_forum_mafia.html")));
         SectionContent content = sectionParser.parse(pageStr);
 
         assertEquals(content, testContent);
